--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <script></script>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
