--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <!-- <script
+      type="module"
+      src="https://cdn.jsdelivr.net/gh/phambao7320/TestWidget@main/main.min.js"
+      data-position="top-left"
+    ></script> -->
   </head>
   <body>
     <div id="app">
       <script></script>
     </div>
-    <script type="module" src="/main.js"></script>
+    <!-- <script type="module" src="/main.js"></script> -->
   </body>
 </html>
