--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <div id="app">
       <script></script>
     </div>
-    <!-- <script type="module" src="/main.js"></script> -->
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
