--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <script type="module" src="/main.js"></script>
     <!-- <script
       type="module"
       src="https://cdn.jsdelivr.net/gh/phambao7320/TestWidget@main/main.min.js"
@@ -11,9 +12,6 @@
     ></script> -->
   </head>
   <body>
-    <div id="app">
-      <script></script>
-    </div>
-    <script type="module" src="/main.js"></script>
+    <div id="app"></div>
   </body>
 </html>
