--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <script type="module" src="/main.js"></script>
-    <!-- <script
-      type="module"
-      src="https://cdn.jsdelivr.net/gh/phambao7320/TestWidget@main/main.min.js"
-      data-position="top-left"
-    ></script> -->
+    <!-- <script type="module">
+      import { initializeWidget } from "https://cdn.jsdelivr.net/gh/phambao7320/TestWidget@main/main.min.js";
+
+      document.addEventListener("DOMContentLoaded", () => {
+        const position = "top-left";
+        initializeWidget({ position });
+      });
+    </script> -->
   </head>
   <body>
     <div id="app"></div>
