--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Vite App</title>
     <script type="module" src="/main.js"></script>
     <!-- <script type="module">
-      import { initializeWidget } from "https://cdn.jsdelivr.net/gh/phambao7320/TestWidget@main/main.min.js";
+      import { initializeWidget } from "";
 
       document.addEventListener("DOMContentLoaded", () => {
-        const position = "top-left";
-        initializeWidget({ position });
+        // const position = "top-left";
+        // initializeWidget({ position: "top-left" });
       });
     </script> -->
   </head>
