--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>Vite App</title>
     <script type="module" src="/main.js"></script>
     <!-- <script type="module">
-      import { initializeWidget } from "";
+      import { initializeWidget } from "https://raw.githack.com/phambao7320/TestWidget/main/main.js";
 
-      document.addEventListener("DOMContentLoaded", () => {
-        // const position = "top-left";
-        // initializeWidget({ position: "top-left" });
-      });
+      // document.addEventListener("DOMContentLoaded", () => {
+      // const position = "top-right";
+      initializeWidget({ position: "bottom-right" });
+      // });
     </script> -->
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">Content abcxyz</div>
   </body>
 </html>
