--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <!-- <script type="module" src="/main.js"></script> -->
+    <script type="module" src="/main.js"></script>
     <!-- <script type="module">
       import { initializeWidget } from "https://raw.githack.com/phambao7320/TestWidget/main/main.js";
 
@@ -13,15 +13,15 @@
       initializeWidget({ position: "bottom-right" });
       // });
     </script> -->
-    <script
+    <!-- <script
       type="module"
       src="https://rawcdn.githack.com/phambao7320/TestWidget/e9922ad92577f22d86a8d535f902cc14f94985b2/main.js"
-    ></script>
-    <script>
+    ></script> -->
+    <!-- <script>
       document.addEventListener("DOMContentLoaded", () => {
         window.initializeWidget({ position: "top-left" });
       });
-    </script>
+    </script> -->
   </head>
   <body>
     <div id="app">Content abcxyz</div>
