--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
     ></script> -->
     <!-- <script>
       document.addEventListener("DOMContentLoaded", () => {
-        window.initializeWidget({ position: "top-left" });
+        window.initializeWidget({
+          position: "bottom-right",
+          CWUrl: "https://www.google.com",
+          TCUrl: "https://jwt.io",
+        });
       });
     </script> -->
   </head>
