--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     </script> -->
   </head>
   <body>
-    <div id="app">Content abcxyz</div>
+    <!-- <div id="app">Content abcxyz</div> -->
   </body>
 </html>
