remove all console log

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       type="module"
       src="https://rawcdn.githack.com/phambao7320/TestWidget/e9922ad92577f22d86a8d535f902cc14f94985b2/main.js"
     ></script> -->
-    <script>
+    <!-- <script>
       document.addEventListener("DOMContentLoaded", () => {
         window.initializeWidgetClubWonder({
           brandId: 38,
@@ -27,9 +27,10 @@
           elementId: "widget",
         });
       });
-    </script>
+    </script> -->
   </head>
   <body>
+    <button onclick="initializeWidgetClubWonder()">Click</button>
     <div id="widget"></div>
   </body>
 </html>
