fix build error

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </script> -->
   </head>
   <body>
-    <button onclick="initializeWidgetClubWonder()">Click</button>
+    <!-- <button onclick="initializeWidgetClubWonder()">Click</button> -->
     <div id="widget"></div>
   </body>
 </html>
