get link TC ref

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         window.initializeWidgetClubWonder({
           brandId: 38,
           restaurantId: 2,
-          urlTableCheck: "https://jwt.io",
           elementId: "widget",
         });
       });
@@ -31,6 +30,6 @@
   </head>
   <body>
     <!-- <button onclick="initializeWidgetClubWonder()">Click</button> -->
-    <div id="widget"></div>
+    <div id="widget" style="width: 100%; height: 100%"></div>
   </body>
 </html>
